FIX PMD bugs, dependency missing, compilation incubator features, fix awaitility asserts